@@ -1,3 +1,7 @@
+2002-09-15  Jeff Waugh  <jdub@perkypants.org>
+
+	* 2.x/g2releasenotes.xml: Updates for 2.0.2.
+
 2002-09-09  Steve Fox  <drfickle@k-lug.org>
 	
 	* 2.x/g2releasenotes.xml: scrollkeeper requires intltool.
